<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



            <TextView
                android:id="@+id/registration_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/info"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_label" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollInnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="470dp"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="9dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/NameLabel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="40dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_name"
                            android:hint="@string/name"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userNameLabel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/NameLabel"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="40dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_username_circle"
                            android:hint="@string/username"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLabel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/userNameLabel"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="40dp">

                        <EditText
                            android:id="@+id/Email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_email"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp"
                            android:autofillHints="emailAddress"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="56dp"
                            tools:layout_editor_absoluteY="261dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mobileLabel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emailLabel"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="40dp">

                        <EditText
                            android:id="@+id/mobile"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="2348058867077"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_mobile"
                            android:ems="10"
                            android:hint="@string/mobile"
                            android:inputType="phone"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLabel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mobileLabel"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="40dp">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="String like: $iaa86"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_password"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmedPasswordLabel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="40dp">

                        <EditText
                            android:id="@+id/confirmedPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="Same as above: $iaa86"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_password"
                            android:ems="10"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:textColor="@color/purple_700"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/genderLabel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/confirmedPasswordLabel"
                        tools:layout_editor_absoluteX="1dp"
                        tools:layout_editor_absoluteY="40dp">


                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:layout_editor_absoluteX="1dp"
                            tools:layout_editor_absoluteY="427dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:drawableEnd="@drawable/ic_jetup"
                        android:text="@string/register"
                        android:textStyle="bold"
                        app:circularflow_radiusInDP="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>